# 2025-marketplace-commutecollection

./: .gitignore  README.md  analysis-dexter.ipynb  analysis-victor.ipynb  city_winners.csv  commute_routes.csv  conversion_script.py  dumping_notebook.ipynb  main.py  map_routes.ipynb  pyproject.toml  results-dexter.csv  results-victor.csv  results.csv  setup_cron.sh  top_routes_by_city.csv
data/dexter/: commute_routes.csv
scripts_by_timezone/: atlantic.py  central.py  eastern.py  mountain.py  pacific.py
