[project]
name = "2025-marketplace-commuteroutes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
    "plotly>=6.3.0",
    "folium>=0.16.0",
    "mapclassify>=2.6.0",
    "gcsfs>=2025.7.0",
]
